// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Shellbar /> create shellbar 1`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <span
      className="fd-shellbar__title"
    >
      Corporate Portal
    </span>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                onClick={[Function]}
                role=""
              >
                JS
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 2`] = `
<div
  className="fd-shellbar blue"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <span
      className="fd-shellbar__title"
    >
      Corporate Portal
    </span>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                onClick={[Function]}
                role=""
              >
                JS
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 3`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-product-menu"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              className="fd-product-menu__control"
              onClick={[Function]}
            >
              <span
                className="fd-shellbar__title"
              >
                Corporate Portal
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-search-input"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-input-group fd-input-group--after"
                onClick={[Function]}
              >
                <input
                  className="fd-input fd-input-group__input"
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Enter a fruit"
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search fd-input-group__button"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-label="Settings"
              className="fd-button sap-icon--settings fd-shellbar__button"
              onClick={[Function]}
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                5
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-shellbar__action fd-shellbar__action--desktop"
            onClick={[Function]}
          >
            <button
              aria-label="Notifications"
              className="fd-button sap-icon--bell fd-shellbar__button"
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                2
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              role="button"
            >
              <button
                className="fd-button sap-icon--overflow fd-shellbar__button"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                   
                  7
                   
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                onClick={[Function]}
                role=""
              >
                JS
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switcher"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-button sap-icon--grid fd-shellbar__button"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 4`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-product-menu"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              className="fd-product-menu__control"
              onClick={[Function]}
            >
              <span
                className="fd-shellbar__title"
              >
                Corporate Portal
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-search-input"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-input-group fd-input-group--after"
                onClick={[Function]}
              >
                <input
                  className="fd-input fd-input-group__input"
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Enter a fruit"
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search fd-input-group__button"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-label="Settings"
              className="fd-button sap-icon--settings fd-shellbar__button"
              onClick={[Function]}
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                5
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-shellbar__action fd-shellbar__action--desktop"
            onClick={[Function]}
          >
            <button
              aria-label="Notifications"
              className="fd-button sap-icon--bell fd-shellbar__button"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              role="button"
            >
              <button
                className="fd-button sap-icon--overflow fd-shellbar__button"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                   
                  5
                   
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                onClick={[Function]}
                role=""
              >
                JS
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switcher"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-button sap-icon--grid fd-shellbar__button"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 5`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-product-menu"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              className="fd-product-menu__control"
              onClick={[Function]}
            >
              <span
                className="fd-shellbar__title"
              >
                Corporate Portal
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-search-input"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-input-group fd-input-group--after"
                onClick={[Function]}
              >
                <input
                  className="fd-input fd-input-group__input"
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Enter a fruit"
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search fd-input-group__button"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <button
        aria-label="Settings"
        className="fd-button sap-icon--settings fd-shellbar__button"
        onClick={[Function]}
      >
        <span
          aria-label="Unread count"
          className="fd-counter fd-counter--notification"
        >
          5
        </span>
      </button>
    </div>
    <div
      className="fd-popover"
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <div
            className="fd-shellbar__action fd-shellbar__action--desktop"
            onClick={[Function]}
          >
            <button
              aria-label="Notifications"
              className="fd-button sap-icon--bell fd-shellbar__button"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              role="button"
            >
              <button
                className="fd-button sap-icon--overflow fd-shellbar__button"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                   
                  5
                   
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-has-background-color-accent-8"
                onClick={[Function]}
                role=""
              >
                JS
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switcher"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-button sap-icon--grid fd-shellbar__button"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Shellbar /> create shellbar 6`] = `
<div
  className="fd-shellbar"
>
  <div
    className="fd-shellbar__group fd-shellbar__group--product"
  >
    <a
      className="fd-shellbar__logo"
    >
      <img
        alt="SAP"
        src="//unpkg.com/fundamental-styles/dist/images/sap-logo.png"
      />
    </a>
    <div
      className="fd-product-menu"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              className="fd-product-menu__control"
              onClick={[Function]}
            >
              <span
                className="fd-shellbar__title"
              >
                Corporate Portal
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__subtitle"
    >
      Subtitle
    </div>
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--copilot"
  >
    <img
      alt="CoPilot"
      height="30"
      src="//unpkg.com/fundamental-styles/dist/images/copilot.png"
      width="30"
    />
  </div>
  <div
    className="fd-shellbar__group fd-shellbar__group--actions"
  >
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-search-input"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <div
                className="fd-input-group fd-input-group--after"
                onClick={[Function]}
              >
                <input
                  className="fd-input fd-input-group__input"
                  onChange={[Function]}
                  onClick={[Function]}
                  onKeyPress={[Function]}
                  placeholder="Enter a fruit"
                  type="text"
                  value=""
                />
                <span
                  className="fd-input-group__addon fd-input-group__addon--button"
                >
                  <button
                    className="fd-button--light sap-icon--search fd-input-group__button"
                    onClick={[Function]}
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <button
              aria-label="Settings"
              className="fd-button sap-icon--settings fd-shellbar__button"
              onClick={[Function]}
            >
              <span
                aria-label="Unread count"
                className="fd-counter fd-counter--notification"
              >
                5
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <button
        aria-label="Notifications"
        className="fd-button sap-icon--bell fd-shellbar__button"
        onClick={[Function]}
      >
        <span
          aria-label="Unread count"
          className="fd-counter fd-counter--notification"
        >
          2
        </span>
      </button>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--mobile"
    >
      <div
        className="fd-popover"
      >
        <div
          onFocus={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="fd-popover__control"
          >
            <div
              className="fd-shellbar-collapse--control"
              onClick={[Function]}
              role="button"
            >
              <button
                className="fd-button sap-icon--overflow fd-shellbar__button"
              >
                <span
                  aria-label="Unread count"
                  className="fd-counter fd-counter--notification"
                >
                   
                  7
                   
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--show-always"
    >
      <div
        className="fd-user-menu"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <span
                className="fd-identifier fd-identifier--xs fd-identifier--circle fd-identifier--thumbnail"
                onClick={[Function]}
                role="presentation"
                style={
                  Object {
                    "backgroundImage": "url(//unpkg.com/fundamental-styles/dist/images/sap-logo.png)",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="fd-shellbar__action fd-shellbar__action--desktop"
    >
      <div
        className="fd-product-switcher"
      >
        <div
          className="fd-popover"
        >
          <div
            onFocus={[Function]}
            onMouseDown={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="fd-popover__control"
            >
              <button
                className="fd-button sap-icon--grid fd-shellbar__button"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
